manifests/service_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  finalizers:
  - "django.thismatters.github/protector"
spec:
  type: ClusterIP
  ports:
   - protocol: TCP
     port: 8080
     targetPort: {app_port}
  selector:
   role: app
   version: "{version}"
