manifests/service_redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  finalizers:
  - "django.thismatters.github/protector"
spec:
  type: ClusterIP
  ports:
   - protocol: TCP
     port: 6379
     targetPort: {redis_port}
  selector:
   role: redis
