manifests/ingress_app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "4m"
    cert-manager.io/cluster-issuer: "{cluster_issuer}"
    cert-manager.io/common-name: "{common_name}"
    cert-manager.io/renew-before: 480h
  finalizers:
  - "django.thismatters.github/protector"
spec:
  tls:
  - hosts:
      - "{common_name}"
      - "{host}"
    secretName: app-tls
  rules:
  - host: "{host}"
    http:
      paths:
      - backend:
          service:
            name: app-service
            port:
              number: 8080
        path: /
        pathType: "Prefix"
